checking to see if this is the correct img src file path

--- a/my_solutions/my_solutions.html
+++ b/my_solutions/my_solutions.html
@@ -10,8 +10,8 @@
 <body>
     <!-- This is the first row of the HTML picture layout, one proportioned (woman) and one distorted (man) as described in the desired outcome image -->
     <div>
-            <img class="image proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
-            <img class="image distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
+            <img class="image proportioned" src="images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
+            <img class="image distorted" src="images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
     </div>
     
     
