--- a/my_solutions/my_solutions.html
+++ b/my_solutions/my_solutions.html
@@ -10,15 +10,15 @@
 <body>
     <!-- This is the first row of the HTML picture layout, one proportioned (woman) and one distorted (man) as described in the desired outcome image -->
     <div>
-            <img class="image proportioned" src="images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
-            <img class="image distorted" src="images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
+            <img class="image proportioned" src="../images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
+            <img class="image distorted" src="../images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
     </div>
     
     
     <!--  This is the second row of the HTML picture layout, both proportioned (man and woman) as described in the desired outcome image -->
     <div>
-            <img class="image proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
-            <img class="image proportioned" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
+            <img class="image proportioned" src="../images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
+            <img class="image proportioned" src="../images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
     </div>
 
 </body>
