changed the last decloration img class names to original

--- a/my_solutions/my_solutions.html
+++ b/my_solutions/my_solutions.html
@@ -17,8 +17,8 @@
     
     <!--  This is the second row of the HTML picture layout, both proportioned (man and woman) as described in the desired outcome image -->
     <div>
-            <img class="image proportioned" src="../images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
-            <img class="image distorted" src="../images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
+            <img class="original proportioned" src="../images/pexels-katho-mutodo-8434791.jpg" alt="Lady with glasses">
+            <img class="original distorted" src="../images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised face">
     </div>
 
 </body>
